mi pagina proceso

--- a/index.html
+++ b/index.html
@@ -1,21 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mi pagina </title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-
+        <div class="container">
+            <h1 class="haha">Biografía de My Little Pony</h1>
+        </div>
     </header>
+    <div class="container">
+        <article>
+
+            <li>
+                <a href="hola">
+                    <p>La trama de <strong>My Little Pony</strong> se centra en un grupo de ponis mágicos que viven en
+                        el reino
+                        ficticio de Equestria. Estos personajes, conocidos por su valentía, amistad y aventuras, han
+                        evolucionado a lo largo de los años, y la serie ha sido renovada en varias ocasiones, cada una
+                        aportando
+                        nuevos personajes y tramas.</p>
+                </a>
+
+            </li>
+            <p><strong>My Little Pony</strong> es una icónica franquicia de entretenimiento
+                que ha cautivado a
+                generaciones de fanáticos desde su debut en 1983. Creada por la empresa de juguetes Hasbro, la serie
+                original se introdujo como una línea de figuras de ponis de colores y rápidamente se convirtió en un
+                fenómeno cultural.
+            </p>
+
+            <p>La trama de <strong>My Little Pony</strong> se centra en un grupo de ponis mágicos que viven en el reino
+                ficticio de Equestria. Estos personajes, conocidos por su valentía, amistad y aventuras, han
+                evolucionado a lo largo de los años, y la serie ha sido renovada en varias ocasiones, cada una aportando
+                nuevos personajes y tramas.</p>
+
+            <p>La primera serie animada, <strong>My Little Pony: Friendship Is Magic</strong>, fue lanzada en 2010 y es
+                considerada una de las iteraciones más exitosas de la franquicia. Creada por Lauren Faust, esta serie no
+                solo revitalizó la marca, sino que también introdujo a una nueva generación de fanáticos. La historia
+                sigue a Twilight Sparkle, una unicornio que se convierte en la Princesa de la Amistad, y a sus amigos:
+                Applejack, Rarity, Pinkie Pie, Rainbow Dash y Fluttershy. Juntos, enfrentan diversos desafíos y enseñan
+                valiosas lecciones sobre la amistad y la cooperación.</p>
+
+            <p>La franquicia también incluye películas, series derivadas, y una amplia gama de productos que abarcan
+                desde juguetes hasta libros y videojuegos. <strong>My Little Pony</strong> ha sido elogiada por su
+                habilidad para mezclar diversión y mensajes positivos, y su impacto se refleja en su duradera
+                popularidad en todo el mundo.</p>
+
+            <p>Con una comunidad apasionada y una historia rica en magia y amistad, <strong>My Little Pony</strong>
+                sigue siendo una parte importante de la cultura pop, inspirando a niños y adultos por igual con su
+                mensaje de unidad y amor.</p>
+        </article>
+    </div>
     <main>
+        <ul>
+            <li><a href="malu"></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
 
     </main>
     <footer>
 
     </footer>
-    <script ></script>
+    <script src="scrip.js"></script>
 </body>
+
 </html>
