--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     </header>
     <div class="container">
-        <article>
+        <article class="mana">
 
             <li>
                 <a href="hola">
